# salsabeela

salsabeela/salsabeela-webapp/: DESIGN_GUIDELINES.md  index.html  style.css
sl_dokudoku/: _app.tsx  cookies.txt  cypress.config.ts  key-creation.yaml  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json
sl_dokudoku/.github/workflows/: cypress-tests.yml  tests.yml
sl_dokudoku/analp-interface/: package.json
sl_dokudoku/analp-interface/app/: layout.tsx  page.tsx
sl_dokudoku/analp-interface/components/: app-sidebar.tsx  cloud-source-connector.tsx  dashboard-stats.tsx  document-analytics.tsx  document-grid.tsx  document-history.tsx  document-list.tsx  document-metadata.tsx  document-viewer.tsx  entity-analytics.tsx  entity-list.tsx  file-uploader.tsx  financial-analytics.tsx  processing-queue.tsx  recent-documents.tsx  (+3 more)
sl_dokudoku/cypress/: global.d.ts
sl_dokudoku/memory-bank/: activeContext.md  ai_cap.md  epcic_strategy.md  next.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sl_dokudoku/prisma/: schema.prisma  seed.ts
sl_dokudoku/rag_backend/: README.md  pyproject.toml  requirements.txt
sl_dokudoku/rag_backend/src/: main.py
sl_dokudoku/rag_backend/src/api/: rag.py
sl_dokudoku/rag_backend/src/core/: config.py
sl_dokudoku/rag_backend/src/db/: database.py
sl_dokudoku/rag_backend/src/dokudoku_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sl_dokudoku/rag_backend/src/models/: document_chunk.py
sl_dokudoku/src/: auth.ts  main.py  middleware.ts
sl_dokudoku/tests/: auth.spec.ts
(+300 files in other folders)
