[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dokudoku-rag"
version = "0.1.0"
description = "RAG backend for DokuDoku"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "langchain==0.3.21",
    "langchain-openai==0.3.11",
    "langchain-community==0.3.20",
    "sentence-transformers==4.0.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.40",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "numpy==2.2.4",
    "pymupdf==1.23.26"
] 